log/build_2026-03-31_10-24-09/estimation/stdout_stderr.log
Consolidate compiler generated dependencies of target estimation_kinematics
[ 20%] Building CXX object CMakeFiles/estimation_kinematics.dir/src/leg_kinematics.cpp.o
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Matrix3d estimation::LegKinematics::computeInertiaMatrix(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:8:12: warning: unused variable ‘l1’ [-Wunused-variable]
    8 |     double l1 = LegConstants::L_THIGH;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:9:12: warning: unused variable ‘l2’ [-Wunused-variable]
    9 |     double l2 = LegConstants::L_CALF;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:16:12: warning: unused variable ‘s12’ [-Wunused-variable]
   16 |     double s12 = std::sin(q(1) + q(2));  // sin(thigh + calf)
      |            ^~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeCoriolisTerm(const Vector3d&, const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:51:12: warning: unused variable ‘c2’ [-Wunused-variable]
   51 |     double c2 = std::cos(q(1));
      |            ^~
[ 40%] Linking CXX static library libestimation_kinematics.a
[ 40%] Built target estimation_kinematics
[ 60%] Building CXX object CMakeFiles/contact_detection_node.dir/src/gm_observer.cpp.o
[ 80%] Building CXX object CMakeFiles/contact_detection_node.dir/src/contact_detection_node.cpp.o
/home/lzh/VMC_Quadruped/src/estimation/src/gm_observer.cpp: In member function ‘void estimation::GMObserver::update(const Vector3d&, const Vector3d&, const Vector3d&, double)’:
/home/lzh/VMC_Quadruped/src/estimation/src/gm_observer.cpp:53:21: warning: variable ‘p_current’ set but not used [-Wunused-but-set-variable]
   53 |     Eigen::Vector3d p_current = M * q_dot;
      |                     ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/gm_observer.cpp:15:33: warning: unused parameter ‘dt’ [-Wunused-parameter]
   15 |                          double dt) {
      |                          ~~~~~~~^~
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp: In member function ‘void estimation::ContactDetectionNode::on_motor_feedback(interfaces::msg::MotorFeedback12_<std::allocator<void> >::SharedPtr)’:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:19: error: no match for ‘operator-’ (operand types are ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ and ‘rclcpp::Time’)
   52 |         dt = (now - prev_time_).seconds();
      |               ~~~ ^ ~~~~~~~~~~
      |               |     |
      |               |     rclcpp::Time
      |               builtin_interfaces::msg::Time_<std::allocator<void> >
In file included from /usr/include/c++/11/bits/stl_algobase.h:67,
                 from /usr/include/c++/11/memory:63,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/bits/stl_iterator.h:577:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_IteratorR>&)’
  577 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/11/bits/stl_iterator.h:577:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ is not derived from ‘const std::reverse_iterator<_Iterator>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
In file included from /usr/include/c++/11/bits/stl_algobase.h:67,
                 from /usr/include/c++/11/memory:63,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/bits/stl_iterator.h:1693:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const std::move_iterator<_IteratorL>&, const std::move_iterator<_IteratorR>&)’
 1693 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/11/bits/stl_iterator.h:1693:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ is not derived from ‘const std::move_iterator<_IteratorL>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
In file included from /usr/include/eigen3/Eigen/Core:50,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/gm_observer.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:16,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/complex:362:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator-(const std::complex<_Tp>&, const std::complex<_Tp>&)’
  362 |     operator-(const complex<_Tp>& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/11/complex:362:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ is not derived from ‘const std::complex<_Tp>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
In file included from /usr/include/eigen3/Eigen/Core:50,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/gm_observer.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:16,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/complex:371:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator-(const std::complex<_Tp>&, const _Tp&)’
  371 |     operator-(const complex<_Tp>& __x, const _Tp& __y)
      |     ^~~~~~~~
/usr/include/c++/11/complex:371:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ is not derived from ‘const std::complex<_Tp>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
In file included from /usr/include/eigen3/Eigen/Core:50,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/gm_observer.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:16,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/complex:380:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator-(const _Tp&, const std::complex<_Tp>&)’
  380 |     operator-(const _Tp& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/usr/include/c++/11/complex:380:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘rclcpp::Time’ is not derived from ‘const std::complex<_Tp>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
In file included from /usr/include/eigen3/Eigen/Core:50,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/gm_observer.hpp:4,
                 from /home/lzh/VMC_Quadruped/src/estimation/include/estimation/contact_detection_node.hpp:16,
                 from /home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:1:
/usr/include/c++/11/complex:457:5: note: candidate: ‘template<class _Tp> std::complex<_Tp> std::operator-(const std::complex<_Tp>&)’
  457 |     operator-(const complex<_Tp>& __x)
      |     ^~~~~~~~
/usr/include/c++/11/complex:457:5: note:   template argument deduction/substitution failed:
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:52:21: note:   ‘builtin_interfaces::msg::Time_<std::allocator<void> >’ is not derived from ‘const std::complex<_Tp>’
   52 |         dt = (now - prev_time_).seconds();
      |                     ^~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/contact_detection_node.cpp:62:13: warning: unused variable ‘offset’ [-Wunused-variable]
   62 |         int offset = static_cast<int>(leg_idx) * LegConstants::JOINTS_PER_LEG;
      |             ^~~~~~
gmake[2]: *** [CMakeFiles/contact_detection_node.dir/build.make:76：CMakeFiles/contact_detection_node.dir/src/contact_detection_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:165：CMakeFiles/contact_detection_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
